syntax = "proto3";
package hw;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}


message Extra {
    string text = 1;
    uint64 num = 2;
}

message HelloRequest {
    string name = 1;
    Extra extra = 2;
}

message HelloResponse {
    string message = 1;
    Extra extra = 2;
}
